--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "daisyui": "^4.10.5",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
