--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "eduquiz-client",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +19,7 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,7 +27,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "daisyui": "^4.10.5",
-    "eslint": "8.57.0",
+    "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3",
