--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "biome": "biome check --apply src"
+    "biome": "biome check --write src",
+    "next": "next"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -22,12 +23,12 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.3",
+    "@biomejs/biome": "^1.8.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "daisyui": "^4.11.1",
+    "daisyui": "^4.12.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
